<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.uploadStory.UploadStoryActivity">-->

<!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:visibility="visible" />-->


<!--    <ImageView-->
<!--        android:id="@+id/previewImageView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="300dp"-->
<!--        android:contentDescription="@string/image_story"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@drawable/ic_baseline_place_holder_24" />-->

<!--    <androidx.appcompat.widget.SwitchCompat-->
<!--        android:id="@+id/switchCompat"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />-->

<!--    <Button-->
<!--        android:id="@+id/galleryButton"-->
<!--        android:layout_width="130dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/button"-->
<!--        android:text="@string/gallery"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/cameraXButton"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toEndOf="@+id/cameraXButton" />-->

<!--    <Button-->
<!--        android:id="@+id/cameraXButton"-->
<!--        android:layout_width="130dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:backgroundTint="@color/button"-->
<!--        android:elevation="2dp"-->
<!--        android:scaleType="fitCenter"-->
<!--        android:text="@string/camera"-->
<!--        app:layout_constraintStart_toStartOf="@+id/descriptionEditText"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />-->

<!--    <EditText-->
<!--        android:id="@+id/descriptionEditText"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="60dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_marginEnd="60dp"-->
<!--        android:autofillHints="Your description"-->
<!--        android:background="@drawable/border_edit_text"-->
<!--        android:hint="@string/description"-->
<!--        android:inputType="textMultiLine"-->
<!--        android:maxLines="7"-->
<!--        android:minLines="7"-->
<!--        android:padding="10dp"-->
<!--        android:scrollbars="vertical"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.504"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/galleryButton" />-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/share_location"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/switchCompat"-->
<!--        app:layout_constraintStart_toStartOf="@+id/descriptionEditText"-->
<!--        app:layout_constraintTop_toTopOf="@+id/switchCompat" />-->

<!--    <Button-->
<!--        android:id="@+id/uploadButton"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="60dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="60dp"-->
<!--        android:backgroundTint="@color/button"-->
<!--        android:text="@string/upload"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"-->
<!--        app:layout_constraintStart_toStartOf="@+id/descriptionEditText"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/switchCompat"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.uploadStory.UploadStoryActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/previewImageView"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:contentDescription="@string/image_story"
                    app:srcCompat="@drawable/ic_baseline_place_holder_24" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cameraXButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/button"
                    android:elevation="2dp"
                    android:scaleType="fitCenter"
                    android:text="@string/camera"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

                <Button
                    android:id="@+id/galleryButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/button"
                    android:text="@string/gallery" />
            </LinearLayout>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Your description"
                android:background="@drawable/border_edit_text"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="4"
                android:padding="10dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cameraXButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/share_location"
                    app:layout_constraintBottom_toBottomOf="@+id/switchCompat"
                    app:layout_constraintStart_toStartOf="@+id/descriptionEditText"
                    app:layout_constraintTop_toTopOf="@+id/switchCompat" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />
            </LinearLayout>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/button"
                android:text="@string/upload" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>